assets/styles/_typography.scss
h1,
.h1,
.font-h1 {
  font-family: 'FKGroteskNeue', Arial, sans-serif;
  font-size: 1.25rem;
  line-height: 1.2;
  margin-bottom: 1.5rem;
  word-break: break-word;

  @media (min-width: $breakpoint-desktop) {
    font-size: 1.5rem;
  }
}

h2,
.h2,
.font-h2 {
  font-family: 'FKGroteskNeue', Arial, sans-serif;
  font-size: 1.25rem;
  line-height: 1.2;
  margin-bottom: 1.5rem;
  word-break: break-word;

  @media (min-width: $breakpoint-desktop) {
    font-size: 1.5rem;
  }
}

p,
.paragraph,
.font-body {
  font-size: 1.5rem;
  line-height: 1.2;
  margin-block-end: 1.5rem;

  :last-child {
    margin-block-end: 0;
  }

  @media (min-width: $breakpoint-desktop) {
    font-size: 1.5rem;
  }

  a {
    @apply no-underline;
    @apply hover:text-orangeHover;

    &::after {
      content: '↗';
      font-size: 1rem;
      @apply ml-[5px];
      vertical-align: super;
    }

    &.link-NoArrow {
      &::after {
        content: '';
        @apply ml-0;
      }
    }
  }
}

.font-bodySmall {
  font-family: 'FKGroteskNeue', Arial, sans-serif;
  font-size: 0.875rem;
  line-height: 1.2;
  margin-block-end: 1rem;

  @media (min-width: $breakpoint-desktop) {
    font-size: 1rem;
  }

  a {
    @apply no-underline;
    @apply hover:text-orangeHover;

    &::after {
      content: '↗';
      font-size: 0.675rem;
      @apply ml-[3px];
      vertical-align: super;
    }

    &.link-NoArrow {
      &::after {
        content: '';
        @apply ml-0;
      }
    }
  }
}

.font-menu {
  font-family: 'FKGroteskNeue', Arial, sans-serif;
  font-size: 1.5rem;
  line-height: 1;

  @media (min-width: $breakpoint-desktop) {
    font-size: 1.5rem;
  }
}

hr {
  border: 0.5px solid var(--black);
  margin: 0 auto;
}

code {
  background: var(--color-background-secondary);
  border-radius: 4px;
  display: inline-block;
  font-size: 0.95em;
  padding: 0 0.375em;
  word-break: break-word;
}

figcaption {
  color: var(--black);
  font-size: var(--bodyFontSizeSmall);
  margin-block-start: 0.25rem;
}

blockquote,
.blockquote {
  border-inline-start: 5px solid var(--color-accent);
  display: block;
  font-size: 1.44rem;
  font-style: italic;
  font-weight: 500;
  line-height: calc(1em + 0.75rem);
  margin: var(--flow-space) 0 var(--flow-space) 2.5rem;
  max-width: 100%;
  padding-inline-start: 0.8rem;

  footer {
    color: var(--color-text-muted);
    font-size: var(--bodyFontSize);
    margin-block-start: 0.25rem;
  }
}

.wysiwyg {
  // h1,
  // .h1,
  // .font-h1,
  // h2,
  // .h2,
  // .font-h2,
  // h3,
  // .h3,
  // .font-h3 {
  //   margin-bottom: 2rem;
  // }

  button {
    text-decoration: none;
  }

  p {
    &:last-child {
      margin-bottom: 0;
    }
  }
}

@media print {
  h1,
  .h1,
  h2,
  .h2 {
    font-size: 18pt;
  }

  h3,
  .h3,
  h4,
  .h4 {
    font-size: 14pt;
  }

  p {
    font-size: 10pt;
  }
}

